fixed some full-width styles on the single post and homepage on mobile. changed body font size from 19px to 18px.

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -653,3 +653,11 @@ body.home {
 	color: #fff;
 	font-size: 16px;
 }
+
+@media (max-width: 768px) {
+	#hero-section {
+		margin-left: calc(-1 * max(1.25em, env(safe-area-inset-left)));
+		margin-right: calc(-1 * max(1.25em, env(safe-area-inset-right)));
+		width: calc(100% + max(1.25em, env(safe-area-inset-left)) + max(1.25em, env(safe-area-inset-right)));
+	}
+}
