--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -89,7 +89,7 @@ body.sticky-header #masthead {
     color: #fff;
     text-transform: uppercase;
     line-height: 2.5em;
-	font-size: 19px;
+	font-size: 18px;
 }
 
 #primary-menu .sub-menu {
